publicación de sanctum

--- a/backend/.env
+++ b/backend/.env
@@ -30,7 +30,7 @@ DB_PASSWORD=secret # Corregido (tu contraseña root de MySQL en Docker)
 # --- Fin Base de Datos ---
 
 # --- Configuración de Sesión, Cache, Colas (Usando Redis) ---
-SESSION_DRIVER=file # Recomendado (usa Redis)
+SESSION_DRIVER=redis # Recomendado (usa Redis)
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
